syntax = "proto3";

package app.miniboard.authorizations.v1;

import "google/api/annotations.proto";

option go_package = "authorizations";

service AuthorizationsService {
    // Create Authorization
    //
    // Returns a user authorization.
    rpc CreateAuthorization(CreateAuthorizationRequest) returns (Authorization) {
        option (google.api.http) = {
            post: "/api/v1/authorizations"
            body: "*"
        };
    }
}

message CreateAuthorizationRequest {
    // Authorization code for.
    string authorization_code = 1;
    // Grant type.
    string grant_type = 2;
    // Refresh token for 'refresh_token' grant type.
    string refresh_token = 3;
}

message Authorization {
    // Type of the token.
    string token_type = 1;
    // Access token.
    string access_token = 2;
    // Refresh token.
    string refresh_token = 3;
}
